versioned_docs/version-2025.2.1/professor/vitor_prestes_luzio.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Vitor Prestes Luzio",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Física III - 2456",
          "size": 2,
          "teachers": [
            "Vitor Prestes Luzio"
          ],
          "classroom": "laboratorio_de_fisica",
          "students": [
            "COM2023"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Física I - 2325",
          "size": 2,
          "teachers": [
            "Vitor Prestes Luzio"
          ],
          "classroom": "laboratorio_de_fisica",
          "students": [
            "COM2025"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
,
        {
          "subject": "Física II - 2421",
          "size": 2,
          "teachers": [
            "Vitor Prestes Luzio"
          ],
          "classroom": "laboratorio_de_fisica",
          "students": [
            "COM2024"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }

      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Física III - 1242",
          "size": 2,
          "teachers": [
            "Vitor Prestes Luzio"
          ],
          "classroom": "sala_03_-_cr_toledo",
          "students": [
            "IIW2023B"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        }
        ,
        {
          "subject": "Física II - 1229",
          "size": 2,
          "teachers": [
            "Vitor Prestes Luzio"
          ],
          "classroom": "sala_02_-_cr_toledo",
          "students": [
            "IIW2024B"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
        ,
        {
          "subject": "Física I - 1070",
          "size": 2,
          "teachers": [
            "Vitor Prestes Luzio"
          ],
          "classroom": "sala_01_-_cr_toledo",
          "students": [
            "IIW2025B"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Projeto Integrador - 1593",
          "size": 1,
          "teachers": [
            "Vitor Prestes Luzio"
          ],
          "classroom": "sala_1-4",
          "students": [
            "EIN2022"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Vitor Prestes Luzio

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
